v0.2.1
------
 - Added a timeout to the RCON challenge.
 - Made the console less verbose (only required info is displayed, no debugging
   info)

v0.2.0
------
 - First public release.
 - Fixed bug that crashes csbot when users have spaces in their nickname.
 - Added IRC to HL chat via RCON.

v0.1.2
------
 - First private release.