@@ -2,7 +2,7 @@
 //
 // config.h - Configuration header for HLBot
 //
-// $Id: config.h,v 1.2 2002/06/18 17:56:52 yodatoad Exp $
+// $Id: config.h,v 1.3 2002/06/22 07:21:09 yodatoad Exp $
 
 // Copyright (C) 2002  Erik Davidson
 //
@@ -26,10 +26,12 @@
 // You may want to edit this location
 #define CONFIGLOC "hlbot.cfg"
 
-//#define DEBUG
+#define DEBUG
 
 #define USERNAME "HLBot"
 #define REALNAME "HLBot"
+
+#define SERVERTIMEOUT 5
 
 #define IPCSOCKNAMEC ".hlbotsockc"
 #define IPCSOCKNAMEP ".hlbotsockp"
